<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linear_menu"
        android:background="@color/purple"
        android:paddingVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_infinite"
            android:src="@drawable/ic_infinite"
            android:layout_weight="1"
            android:layout_width="32dp"
            android:layout_height="32dp"/>
        <ImageView
            android:id="@+id/image_emoji"
            android:src="@drawable/ic_emoji"
            android:layout_weight="1"
            android:layout_width="32dp"
            android:layout_height="32dp"/>
        <ImageView
            android:id="@+id/image_sunny"
            android:src="@drawable/ic_sunny"
            android:layout_weight="1"
            android:layout_width="32dp"
            android:layout_height="32dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_name"
        android:text="@string/user"
        android:layout_below="@+id/linear_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/cabin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text_phrase"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="128dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/cabin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_below="@+id/text_phrase"
        android:layout_width="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/dark_purple"
        android:elevation="5dp"
        android:layout_height="3dp"/>

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/dark_purple"
        android:fontFamily="@font/cabin"
        android:textSize="18sp"
        android:text="@string/new_phrase" />

</RelativeLayout>